--- a/post/templates/post/post_list.html
+++ b/post/templates/post/post_list.html
@@ -11,16 +11,26 @@
     </head>
 
     <body>
-        <div>
+        <div class="page-header">
             <h1><a href="/post/list/">Django Blog</a></h1>
         </div>
 
-        {% for post in posts%}
-            <div>
-                <h1><a href="">{{ post.title }}</a></h1>
-                <p>{{ post.author }}</p>
-                <p>{{ post.created_date }}</p>
+        <div class="content container">
+            <div class="row">
+                <div class="col-md-8">
+                    {% for post in posts %}
+                        <div class="post">
+                            <h1><a href="">{{ post.title }}</a></h1>
+                            <div class="date">
+                                <p> Создан: {{ post.created_date }}</p>
+                                <p> Автор: {{ post.author }}</p>
+                            </div>
+                            <p>{{ post.text|linebreaksbr }}</p>
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
-        {% endfor %}
+        </div>
+
     </body>
 </html>
