--- a/post/static/css/post.css
+++ b/post/static/css/post.css
@@ -1,21 +1,13 @@
-/*h1 a {*/
-/*    color: #447e9b;*/
-/*    font-family: 'Lobster'*/
-/*}*/
-
-/*body {*/
-/*    padding-left: 15px;*/
-/*}*/
 
 .page-header {
-    background-color: #ff9400;
+    background-color: #2C9694;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     color: #ffffff;
-    font-size: 36pt;
+    font-size: 46pt;
     text-decoration: none;
 }
 
@@ -29,6 +21,7 @@ h1, h2, h3, h4 {
 
 .date {
     color: #828282;
+    font-size: 10pt;
 }
 
 .save {
@@ -48,6 +41,7 @@ h1, h2, h3, h4 {
 
 .post {
     margin-bottom: 70px;
+    font-size: 16pt;
 }
 
 .post h1 a, .post h1 a:visited {
