add new post form without saving option

--- a/post/templates/post/base.html
+++ b/post/templates/post/base.html
@@ -12,6 +12,7 @@
 
     <body>
         <div class="page-header">
+            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span> New post </a>
             <h1><a href="/post/list/">Django Blog</a></h1>
         </div>
 
