--- a/post/templates/post/base.html
+++ b/post/templates/post/base.html
@@ -12,7 +12,9 @@
 
     <body>
         <div class="page-header">
-            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span> New post </a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'post_new' %}" class="top-menu"> <span class="glyphicon glyphicon-plus"></span> New post </a>
+            {% endif %}
             <h1><a href="/post/list/">Django Blog</a></h1>
         </div>
 
