--- a/post/templates/post/post_detail.html
+++ b/post/templates/post/post_detail.html
@@ -2,6 +2,9 @@
 
 {% block content %}
         <div class="post">
+            {% if user.is_authenticated and user == post.author %}
+                <a class="btn btn-default" href="{% url 'post_edit' post_pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+            {% endif %}
             <h1><a href="">{{ post.title }}</a></h1>
             <div class="date">
                 <p> Создан: {{ post.created_date }}</p>
