--- a/post/static/css/post.css
+++ b/post/static/css/post.css
@@ -24,6 +24,11 @@ h1, h2, h3, h4 {
     font-size: 10pt;
 }
 
+.comments {
+    color: #5E5694;
+    font-size: 12pt;
+}
+
 .save {
     float: right;
 }
