--- a/post/templates/post/post_detail.html
+++ b/post/templates/post/post_detail.html
@@ -12,13 +12,13 @@
                 <p> Автор: {{ post.author }}</p>
             </div>
             <p>{{ post.text|linebreaksbr }}</p>
-            <div class="date">
+            <div class="comments">
 <!--                <a class="btn btn-default" href="{% url 'post_remove' post_pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>-->
-            {% for comment in comments %}
-                <p> Создан: {{ comment.created_date }}</p>
-                <p> Автор: {{ comment.author }}</p>
-                <p> Текст: {{ comment.text }}</p>
-            {% endfor %}
+                <h2> Comments </h2>
+                {% for comment in comments %}
+                    <p class="date"> Автор: {{ comment.author }}, Создан: {{ comment.created_date }}</p>
+                    <p> Текст: {{ comment.text }}</p>
+                {% endfor %}
             </div>
         </div>
 {% endblock %}
