--- a/post/static/css/post.css
+++ b/post/static/css/post.css
@@ -19,6 +19,10 @@ h1, h2, h3, h4 {
     font-family: 'Lobster', cursive;
 }
 
+hr {
+    border-width: 2px;
+}
+
 .date {
     color: #828282;
     font-size: 10pt;
@@ -26,7 +30,8 @@ h1, h2, h3, h4 {
 
 .comments {
     color: #5E5694;
-    font-size: 16pt;
+    font-size: 14pt;
+    /*margin: 20px 0px 20px 20px;*/
 }
 
 .save {
