--- a/post/templates/post/post_detail.html
+++ b/post/templates/post/post_detail.html
@@ -15,11 +15,13 @@
 
             <h2 style="margin-top: 60px;"> Comments </h2>
             <div class="comments">
-<!--                <a class="btn btn-default" href="{% url 'post_remove' post_pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>-->
                 <hr>
                 {% for comment in comments %}
                     <p class="date"> Автор: {{ comment.author }}, Создан: {{ comment.created_date }}</p>
                     <p> {{ comment.text }}</p>
+                    {% if user.is_authenticated and user == comment.author %}
+                    <a class="btn btn-default" href="{% url 'comment_remove' comment_pk=comment.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+                    {% endif %}
                     <hr>
                 {% empty %}
                     <p>No comments here yet :(</p>
