add create comment option

--- a/post/templates/post/post_detail.html
+++ b/post/templates/post/post_detail.html
@@ -14,8 +14,13 @@
             <p>{{ post.text|linebreaksbr }}</p>
 
             <h2 style="margin-top: 60px;"> Comments </h2>
+            <hr>
+            <form action="{% url 'comment_new' post_pk=post.pk %}" method="POST" class="post-form">{% csrf_token %}
+                {{ comment_form.as_p }}
+                <button type="submit" class="save btn btn-default">Save</button>
+            </form>
+            <hr>
             <div class="comments">
-                <hr>
                 {% for comment in comments %}
                     <p class="date"> Автор: {{ comment.author }}, Создан: {{ comment.created_date }}</p>
                     <p> {{ comment.text }}</p>
