add lke/dislike option, add views count

--- a/post/templates/post/post_list.html
+++ b/post/templates/post/post_list.html
@@ -7,6 +7,7 @@
             <div class="date">
                 <p> Автор: {{ post.author }}, Создан: {{ post.created_date }}</p>
                 <p> Comments: {{ post.comments.count }} </p>
+                <p> Просмотры: {{ post.view }} </p>
             </div>
 <!--            <p>{{ post.text|linebreaksbr }}</p>-->
         </div>
