--- a/post/templates/post/post_detail.html
+++ b/post/templates/post/post_detail.html
@@ -12,6 +12,27 @@
                 <p> Создан: {{ post.created_date }}</p>
             </div>
             <p>{{ post.text|linebreaksbr }}</p>
+            <div>
+                <div style="display: inline-block">
+                    <a class="btn btn-default" href="{% url 'post_like' post_pk=post.pk %}">
+                        <span>Like</span>
+                    </a>
+                </div>
+
+                <div style="display: inline-block">
+                    {{post.like}}
+                </div>
+
+                <div style="display: inline-block">
+                    <a class="btn btn-default" href="{% url 'post_dislike' post_pk=post.pk %}">
+                        <span>Dislike</span>
+                    </a>
+                </div>
+
+                <div style="display: inline-block">
+                    <a style="text-decoration: none; color: red">{{post.dislike}}</a>
+                </div>
+            </div>
 
             <h2 style="margin-top: 60px;"> Comments </h2>
             <hr>
