--- a/post/static/css/post.css
+++ b/post/static/css/post.css
@@ -65,3 +65,10 @@ hr {
 .post h1 a, .post h1 a:visited {
     color: #000000;
 }
+
+.new-post {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 5px solid #ffffff;
+}
