--- a/post/templates/post/base.html
+++ b/post/templates/post/base.html
@@ -8,12 +8,13 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="{% static 'css/post.css' %}">
+        <script src="https://kit.fontawesome.com/94d106b433.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
         <div class="page-header">
             {% if user.is_authenticated %}
-                <a href="{% url 'post_new' %}" class="top-menu"> <span class="glyphicon glyphicon-plus"></span> New post </a>
+                <a href="{% url 'post_new' %}" class="top-menu"> <span class="new-post"><i class="fas fa-plus"></i></span> </a>
             {% endif %}
             <h1><a href="/post/list/">Django Blog</a></h1>
         </div>
