--- a/post/static/css/post.css
+++ b/post/static/css/post.css
@@ -66,9 +66,12 @@ hr {
     color: #000000;
 }
 
-.new-post {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    border: 5px solid #ffffff;
-}
+/*.icon-button {*/
+/*    color: #ffffff;*/
+/*    float: right;*/
+/*    margin-right: 20px;*/
+/*    width: 80px;*/
+/*    height: 80px;*/
+/*    !*border-radius: 50%;*!*/
+/*    !*border: 5px solid #ffffff;*!*/
+/*}*/
