--- a/post/templates/post/post_detail.html
+++ b/post/templates/post/post_detail.html
@@ -7,14 +7,14 @@
             </div>
             <div style="display: inline-block">
                 {% if user.is_authenticated and user == post.author %}
-                    <a class="btn btn-default" href="{% url 'post_edit' post_pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-                    <a class="btn btn-default" href="{% url 'post_remove' post_pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+                    <a href="{% url 'post_edit' post_pk=post.pk %}"><span style="color: dimgrey"><i class="fas fa-pencil-alt"></i></span></a>
+                    <a href="{% url 'post_remove' post_pk=post.pk %}"><span style="color: dimgrey"><i class="fas fa-trash-alt"></i></span></a>
                 {% endif %}
             </div>
 
             <div class="date">
-                <p> Автор: {{ post.author }}</p>
-                <p> Создан: {{ post.created_date }}</p>
+                <p> Автор: {{ post.author }}, Создан: {{ post.created_date }}</p>
+                <p> Просмотры: {{ post.view }}</p>
             </div>
 
             <p>{{ post.text|linebreaksbr }}</p>
@@ -47,11 +47,11 @@
                 </div>
             </div>
 
-            <h2 style="margin-top: 60px;"> Комментарии </h2>
+            <h3 style="margin-top: 60px;"> Комментарии ({{ post.comments.count }}) </h3>
             <hr>
             <form action="{% url 'comment_new' post_pk=post.pk %}" method="POST" class="comment-form">{% csrf_token %}
                 {{ comment_form.as_p }}
-                <button type="submit" class="save btn btn-default">Add new comment</button>
+                <button type="submit" class="save btn btn-default">Сохранить комментарий</button>
             </form>
             <hr style="margin-top: 60px;">
             <div class="comments">
