--- a/post/templates/post/base.html
+++ b/post/templates/post/base.html
@@ -15,6 +15,7 @@
         <div class="page-header">
             {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}" class="top-menu"> <span><i class="fas fa-plus"></i></span> Новый пост </a>
+                <a href="{% url 'draft_list' %}" class="top-menu"> <span><i class="far fa-file"></i></span> Черновики </a>
             {% endif %}
             <h1><a href="/post/list/">Django Blog</a></h1>
         </div>
