--- a/post/templates/post/base.html
+++ b/post/templates/post/base.html
@@ -22,7 +22,8 @@
 
         <div class="content container">
             <div class="row">
-                <div class="col-md-8">
+                <div>
+<!--                <div class="col-md-8">-->
 
                     {% block content %}
                     {% endblock %}
