--- a/post/templates/post/post_detail.html
+++ b/post/templates/post/post_detail.html
@@ -1,77 +1,84 @@
 {% extends 'post/base.html' %}
 
 {% block content %}
-        <div class="post">
-            <div style="display: inline-block">
-                <h1><a href="">{{ post.title }}</a></h1>
-            </div>
-            <div style="display: inline-block">
-                {% if user.is_authenticated and user == post.author %}
-                    <a href="{% url 'post_edit' post_pk=post.pk %}"><span style="color: dimgrey"><i class="fas fa-pencil-alt"></i></span></a>
-                    <a href="{% url 'post_remove' post_pk=post.pk %}"><span style="color: dimgrey"><i class="fas fa-trash-alt"></i></span></a>
-                    <a href="{% url 'publish' post_pk=post.pk %}"><span style="color: dimgrey"><i class="far fa-file-alt"></i></span></a>
+        <div class="col-md-8">
 
-                {% endif %}
-            </div>
-
-            <div class="date">
-                <p> Автор: {{ post.author }}, Создан: {{ post.created_date }}</p>
-                <p> Просмотры: {{ post.view }}</p>
-            </div>
-
-            <p>{{ post.text|linebreaksbr }}</p>
-
-            <div>
+            <div class="post">
                 <div style="display: inline-block">
-                    <a href="{% url 'post_like' post_pk=post.pk like=1%}">
-                        <span style="color: lightseagreen"><i class="far fa-thumbs-up"></i></span>
-                    </a>
-<!--                    <a class="btn btn-default" href="{% url 'post_like' post_pk=post.pk like=1%}">-->
-<!--                        <span>Like</span>-->
-<!--                    </a>-->
+                    <h1><a href="">{{ post.title }}</a></h1>
                 </div>
-
                 <div style="display: inline-block">
-                    {{post.like}} &nbsp
-                </div>
+                    {% if user.is_authenticated and user == post.author %}
+                        <a href="{% url 'post_edit' post_pk=post.pk %}"><span style="color: dimgrey"><i class="fas fa-pencil-alt"></i></span></a>
+                        <a href="{% url 'post_remove' post_pk=post.pk %}"><span style="color: dimgrey"><i class="fas fa-trash-alt"></i></span></a>
+                        <a href="{% url 'publish' post_pk=post.pk %}"><span style="color: dimgrey"><i class="far fa-file-alt"></i></span></a>
 
-                <div style="display: inline-block">
-                    <a href="{% url 'post_like' post_pk=post.pk like=2%}">
-                        <span style="color: rebeccapurple" ><i class="far fa-thumbs-down"></i> </span>
-                    </a>
-<!--                    <a class="btn btn-default" href="{% url 'post_like' post_pk=post.pk like=2%}">-->
-<!--                        <span>Dislike</span>-->
-<!--                    </a>-->
-                </div>
-
-                <div style="display: inline-block">
-                    <a style="text-decoration: none; color: black">{{post.dislike}}</a>
-                </div>
-            </div>
-
-            <div>
-                <p> Teги: {{ post.tag }} </p>
-            </div>
-
-            <h3 style="margin-top: 60px;"> Комментарии ({{ post.comments.count }}) </h3>
-            <hr>
-            <form action="{% url 'comment_new' post_pk=post.pk %}" method="POST" class="comment-form">{% csrf_token %}
-                {{ comment_form.as_p }}
-                <button type="submit" class="save btn btn-default">Сохранить комментарий</button>
-            </form>
-            <hr style="margin-top: 60px;">
-            <div class="comments">
-                {% for comment in comments %}
-                    <p class="date"> Автор: {{ comment.author }}, Создан: {{ comment.created_date }}</p>
-                    <p> {{ comment.text }}</p>
-                    {% if user.is_authenticated and user == comment.author %}
-                    <a class="date" href="{% url 'comment_edit' comment_pk=comment.pk %}"><span><i class="fas fa-pencil-alt"></i> редактировать </span></a>
-                    <a class="date" href="{% url 'comment_remove' comment_pk=comment.pk %}"><span><i class="fas fa-trash-alt"></i> удалить </span></a>
                     {% endif %}
-                    <hr>
-                {% empty %}
-                    <p>No comments here yet :(</p>
-                {% endfor %}
+                </div>
+
+                {% if post.image %}
+                <img src="{{post.image.url}}" class="img-responsive">
+                {% endif %}
+
+                <div class="date">
+                    <p> Автор: {{ post.author }}, Создан: {{ post.created_date }}</p>
+                    <p> Просмотры: {{ post.view }}</p>
+                </div>
+
+                <p>{{ post.text|linebreaksbr }}</p>
+
+                <div>
+                    <div style="display: inline-block">
+                        <a href="{% url 'post_like' post_pk=post.pk like=1%}">
+                            <span style="color: lightseagreen"><i class="far fa-thumbs-up"></i></span>
+                        </a>
+    <!--                    <a class="btn btn-default" href="{% url 'post_like' post_pk=post.pk like=1%}">-->
+    <!--                        <span>Like</span>-->
+    <!--                    </a>-->
+                    </div>
+
+                    <div style="display: inline-block">
+                        {{post.like}} &nbsp
+                    </div>
+
+                    <div style="display: inline-block">
+                        <a href="{% url 'post_like' post_pk=post.pk like=2%}">
+                            <span style="color: rebeccapurple" ><i class="far fa-thumbs-down"></i> </span>
+                        </a>
+    <!--                    <a class="btn btn-default" href="{% url 'post_like' post_pk=post.pk like=2%}">-->
+    <!--                        <span>Dislike</span>-->
+    <!--                    </a>-->
+                    </div>
+
+                    <div style="display: inline-block">
+                        <a style="text-decoration: none; color: black">{{post.dislike}}</a>
+                    </div>
+                </div>
+
+                <div>
+                    <p> Teги: {{ post.tag }} </p>
+                </div>
+
+                <h3 style="margin-top: 60px;"> Комментарии ({{ post.comments.count }}) </h3>
+                <hr>
+                <form action="{% url 'comment_new' post_pk=post.pk %}" method="POST" class="comment-form">{% csrf_token %}
+                    {{ comment_form.as_p }}
+                    <button type="submit" class="save btn btn-default">Сохранить комментарий</button>
+                </form>
+                <hr style="margin-top: 60px;">
+                <div class="comments">
+                    {% for comment in comments %}
+                        <p class="date"> Автор: {{ comment.author }}, Создан: {{ comment.created_date }}</p>
+                        <p> {{ comment.text }}</p>
+                        {% if user.is_authenticated and user == comment.author %}
+                        <a class="date" href="{% url 'comment_edit' comment_pk=comment.pk %}"><span><i class="fas fa-pencil-alt"></i> редактировать </span></a>
+                        <a class="date" href="{% url 'comment_remove' comment_pk=comment.pk %}"><span><i class="fas fa-trash-alt"></i> удалить </span></a>
+                        {% endif %}
+                        <hr>
+                    {% empty %}
+                        <p>No comments here yet :(</p>
+                    {% endfor %}
+                </div>
             </div>
         </div>
 {% endblock %}
