--- a/post/templates/post/post_list.html
+++ b/post/templates/post/post_list.html
@@ -3,19 +3,21 @@
 {% block content %}
     {% for post in posts %}
 <!--        <div class="col-sm-6">-->
-        <div class="col-sm-6 col-md-5">
-<!--            <div class="card" style="width: 50rem;">-->
+<!--        <div class="col-sm-6 col-md-5">-->
+        <div class="card" style="width: 65rem;">
             <div class="thumbnail">
 <!--                <div class="card-body">-->
                 <div class="caption">
                     <div class="post">
                         <h1><a href="{% url 'post_detail' post_pk=post.pk %}">{{ post.title }}</a></h1>
-                        <!--  <img src="..." class="card-img-top" alt="...">-->
+                        {% if post.image %}
+                        <img src="{{post.image.url}}" class="img-responsive">
+                        {% endif %}
                         <div class="date">
                             <p> Автор: {{ post.author }}, Создан: {{ post.created_date }}</p>
                             <p> Просмотры: {{ post.view }}, Комментарии: {{ post.comments.count }} </p>
                         </div>
-                        <p>{{ post.text|linebreaksbr|truncatechars:40 }}</p>
+                        <p>{{ post.text|linebreaksbr|truncatechars:120 }}</p>
                     </div>
                 </div>
             </div>
