--- a/post/templates/post/post_new.html
+++ b/post/templates/post/post_new.html
@@ -1,10 +1,11 @@
 {% extends 'post/base.html' %}
 
 {% block content %}
-    <h1>New post</h1>
-    <form method="POST" class="post-form">{% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Save</button>
-    </form>
-
+    <div class="col-md-8">
+        <h1>New post</h1>
+        <form method="POST" enctype="multipart/form-data" class="post-form">{% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="save btn btn-default">Save</button>
+        </form>
+    </div>
 {% endblock %}
