--- a/post/static/css/post.css
+++ b/post/static/css/post.css
@@ -1,4 +1,5 @@
 
+
 .page-header {
     background-color: #205067;
     margin-top: 0;
@@ -28,12 +29,12 @@ hr {
 
 .date {
     color: #828282;
-    font-size: 10pt;
+    font-size: 11pt;
 }
 
 .comments {
     color: #5E5694;
-    font-size: 14pt;
+    font-size: 15px;
     /*margin: 20px 0px 20px 20px;*/
 }
 
@@ -78,3 +79,4 @@ hr {
 /*    !*border-radius: 50%;*!*/
 /*    !*border: 5px solid #ffffff;*!*/
 /*}*/
+
