--- a/post/templates/post/base.html
+++ b/post/templates/post/base.html
@@ -16,7 +16,8 @@
             {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}" class="top-menu"> <span><i class="fas fa-plus"></i></span> Новый пост </a>
                 <a href="{% url 'draft_list' %}" class="top-menu"> <span><i class="far fa-file"></i></span> Черновики </a>
-                <a href="{% url 'recommended_list' %}" class="top-menu"> <span><i class="far fa-file"></i></span> Рекомендации </a>
+                <a href="" class="top-menu"> <span><i class="fas fa-star"></i></span> Избранное </a>
+                <a href="{% url 'recommended_list' order=1 %}" class="top-menu"> <span><i class="fas fa-fire"></i></span> Рекомендации </a>
             {% endif %}
             <h1><a href="/post/list/">Django Blog</a></h1>
         </div>
