--- a/post/templates/post/post_detail.html
+++ b/post/templates/post/post_detail.html
@@ -9,9 +9,12 @@
                 </div>
                 <div style="display: inline-block">
                     {% if user.is_authenticated and user == post.author %}
-                        <a href="{% url 'post_edit' post_pk=post.pk %}"><span style="color: dimgrey"><i class="fas fa-pencil-alt"></i></span></a>
-                        <a href="{% url 'post_remove' post_pk=post.pk %}"><span style="color: dimgrey"><i class="fas fa-trash-alt"></i></span></a>
-                        <a href="{% url 'publish' post_pk=post.pk %}"><span style="color: dimgrey"><i class="far fa-file-alt"></i></span></a>
+                        <a href="{% url 'post_edit' post_pk=post.pk %}">
+                            <span style="color: dimgrey"><i class="fas fa-pencil-alt"></i></span></a>
+                        <a href="{% url 'post_remove' post_pk=post.pk %}">
+                            <span style="color: dimgrey"><i class="fas fa-trash-alt"></i></span></a>
+                        <a class="btn btn-default" style="background: transparent" href="{% url 'publish' post_pk=post.pk %}">
+                            <span style="color: dimgrey"><i class="far fa-file-alt"></i> Опубликовать </span></a>
 
                     {% endif %}
                 </div>
@@ -21,13 +24,35 @@
                 {% endif %}
 
                 <div class="date">
-                    <p> Автор: {{ post.author }}, Создан: {{ post.created_date }}</p>
-                    <p> Просмотры: {{ post.view }}</p>
+                    <p>
+                        <i class="fas fa-user"></i> {{ post.author }} &nbsp
+                        <i class="far fa-calendar-alt"></i> {{ post.created_date }}
+                    </p>
+                    <p>
+                        <i class="far fa-folder-open"></i> {{ post.category.category_name }} &nbsp
+                        <i class="far fa-eye"></i> {{ post.view }} &nbsp
+                        <i class="fas fa-star"></i>
+                            {% if rating != 0 %}
+                                {{ rating }} <span style="color: #828282; font-size: 8pt"> / {{r_number_votes}} </span>
+                            {% else %}
+                                - <span style="color: #828282; font-size: 8pt"> / - </span>
+                            {% endif %}
+                    </p>
                 </div>
 
+                <br>
                 <p>{{ post.text|linebreaksbr }}</p>
+                <br>
 
-                <div>
+                <div style="font-size: 14pt">
+                    <p>
+                        Teги: {% for tag in tags %}
+                        {{ tag.tag_name }}
+                        {% endfor %}
+                    </p>
+                </div>
+
+                <div style="font-size: 18px">
                     <div style="display: inline-block">
                         <a href="{% url 'post_like' post_pk=post.pk like=1%}">
                             <span style="color: lightseagreen"><i class="far fa-thumbs-up"></i></span>
@@ -49,32 +74,15 @@
                     </div>
                 </div>
 
-                <div>
-                    <p> Teги: {% for tag in tags %}
-                        {{ tag.tag_name }}
-                        {% endfor %}
-                    </p>
-                </div>
 
-                <div>
-                    <p>
-                        Категория: {{ post.category.category_name }}
-                    </p>
-                </div>
-
-                <div>
-                    <p>
-                        Рейтинг: {{ rating }}
-                    </p>
-                </div>
-
-                <h3 style="margin-top: 60px;"> Комментарии ({{ post.comments.count }}) </h3>
+                <h3 style="margin-top: 60px; font-size: 24px"> Комментарии ({{ post.comments.count }}) </h3>
                 <hr>
                 <form action="{% url 'comment_new' post_pk=post.pk %}" method="POST" class="comment-form">{% csrf_token %}
                     {{ comment_form.as_p }}
                     <button type="submit" class="save btn btn-default">Сохранить комментарий</button>
                 </form>
                 <hr style="margin-top: 60px;">
+
                 <div class="comments">
                     {% for comment in comments %}
                         <p class="date"> Автор: {{ comment.author }}, Создан: {{ comment.created_date }}</p>
