add categories to products, add reviews

--- a/shop/templates/shop/base_product.html
+++ b/shop/templates/shop/base_product.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" href="{% static 'css/shop.css' %}">
+        <link rel="stylesheet" href="{% static 'css/styles.css' %}">
         <script src="https://kit.fontawesome.com/94d106b433.js" crossorigin="anonymous"></script>
     </head>
 
