--- a/shop/templates/shop/base_product.html
+++ b/shop/templates/shop/base_product.html
@@ -13,7 +13,10 @@
 
     <body>
         <div class="page-header">
-            <h1><a href="/product/list/">Django Shop</a></h1>
+            {% if user.is_authenticated %}
+                <a href="{% url 'basket' %}" class="top-menu"> <span><i class="fas fa-shopping-cart"></i></span> Корзина </a>
+            {% endif %}
+            <h1><a href="{% url 'product_list' %}">Django Shop</a></h1>
         </div>
 
         <div class="content container">
