--- a/post/templates/post/post_list.html
+++ b/post/templates/post/post_list.html
@@ -54,7 +54,12 @@
                                 <i class="far fa-folder-open"></i> {{ post.category.category_name }}
                             </p>
                             <p> <i class="far fa-eye"></i> {{ post.view }} &nbsp
-                                <i class="fas fa-star"></i> вывести рейтинг
+                                <i class="fas fa-star"></i>
+                                {% if post.rating.rating != 0 %}
+                                {{ post.rating.rating }} <span style="color: #828282; font-size: 8pt"> / {{ post.rating.number }}</span>
+                                {% else %}
+                                    <span style="color: #828282; font-size: 8pt"> нет оценок </span>
+                                {% endif %}
                             </p>
                         </div>
 
